edited the edittext to the center

--- a/mifospay/src/main/res/layout/activity_mobile_verification.xml
+++ b/mifospay/src/main/res/layout/activity_mobile_verification.xml
@@ -118,6 +118,7 @@
             android:layout_marginLeft="@dimen/value_20dp"
             android:layout_marginRight="@dimen/value_20dp"
             android:layout_marginTop="@dimen/value_10dp"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <EditText
@@ -129,7 +130,7 @@
                 android:inputType="number"
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
-                android:visibility="gone"
+                android:gravity="center"
                 android:maxLength="6"/>
 
             <ProgressBar
